[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["http2"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"   
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "uuid", "chrono", "runtime-async-std"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
